# aiprreviewer

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  prometheus.yml  pyproject.toml  run_local.bat  run_local.sh
.github/workflows/: ci.yml
common/: __init__.py  config.py  db.py  github.py  llm.py  models.py  observability.py  security.py  server.py
engine/: __init__.py  prompts.py
gateway/: main.py
grafana/provisioning/dashboards/: aiprreviewer.json  dashboards.yml
learner/: main.py
orchestrator/: main.py
reviewer/: main.py
tests/: conftest.py  test_audit_fixes.py  test_engine.py  test_integration.py  test_live_e2e_ephemeral.py  test_live_e2e_mock.py  test_live_github.py  test_llm_providers.py  test_security.py  test_services.py
webhook/: main.py
worker/: __init__.py  celery_app.py  pipeline.py  tasks.py
