[project]
name = "aiprreviewer"
version = "1.0.0"
description = "Advanced AI GitHub PR Code Reviewer - LangGraph multi-agent review pipeline"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "langgraph>=0.2",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.19",
    "asyncpg>=0.29",
    "celery>=5.3",
    "redis>=5.0",
    "httpx>=0.27",
    "pydantic>=2.6",
    "PyJWT>=2.8",
    "cryptography>=42",
    "python-dotenv>=1.0",
    "prometheus-client>=0.20",
    "prometheus-fastapi-instrumentator>=7.0",
    "langfuse>=2.0",
]

[project.optional-dependencies]
# Pick at least one provider backend (or run fully offline with none).
openai = ["openai>=1.30", "langchain-openai>=0.1"]
anthropic = ["anthropic>=0.40"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "anyio>=4.2"]
providers = ["openai>=1.30", "langchain-openai>=0.1", "anthropic>=0.40"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["common", "engine", "gateway", "webhook", "orchestrator", "reviewer", "learner", "worker"]
